[build-system]
requires = ["scikit-build-core", "pybind11", "cmake", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "gpufl"
version = "0.1.0.dev"
description = "GPU Monitoring Client"
readme = "README.md"
authors = [
    { name = "Myoungho Shin", email = "myounghoshin84@gmail.com" },
]
requires-python = ">=3.12"
dependencies = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/gpufl/gpufl-client"
Issues = "https://github.com/gpufl/gpufl-client/issues"

[project.optional-dependencies]
# PyTorch integration — first-class. Uses TorchDispatchMode (stable
# since torch 2.1) to capture op-level events as NVTX ranges.
torch = ["torch>=2.1", "requests>=2.28"]

# The following are v1 STUBS — modules import cleanly and raise a
# helpful NotImplementedError explaining the workaround (manual NVTX).
# Full implementations ship post-launch. See gpufl/<name>/__init__.py.
cupy = ["cupy-cuda12x>=12"]
jax  = ["jax>=0.4"]
triton = ["triton>=2.1"]
numba = ["numba", "numpy"]

viz = [
    "pandas>=1.5",
    "matplotlib>=3.7"
]
analyzer = [
    "pandas >= 1.5",
    "rich"
]

# Convenience "install everything" extra. Typical use:
#   pip install gpufl[all]
all = [
    "torch>=2.1", "requests>=2.28",
    "cupy-cuda12x>=12",
    "jax>=0.4",
    "triton>=2.1",
    "numba", "numpy",
    "pandas>=1.5", "matplotlib>=3.7", "rich",
]

[tool.scikit-build]
cmake.args = ["-DCMAKE_BUILD_TYPE=Release", "--log-level=STATUS"]
cmake.define = { BUILD_PYTHON = "ON", BUILD_GPUFL_EXAMPLE = "OFF" }
cmake.build-type = "Release"
cmake.verbose = true
logging.level = "INFO"
ninja.make-fallback = true
wheel.packages = ["python/gpufl"]

[tool.cibuildwheel]
build-frontend = "build"
skip = "pp* cp36* cp37* cp38* cp39* cp310* cp311*"
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = """
curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo > /etc/yum.repos.d/cuda.repo &&
dnf install -y --nogpgcheck cuda-nvcc-13-1 cuda-cudart-devel-13-1 cuda-cupti-13-1 cuda-driver-devel-13-1
"""
environment = { CMAKE_ARGS="-DGPUFL_ENABLE_NVIDIA=ON -DGPUFL_ENABLE_AMD=OFF -DBUILD_PYTHON=ON", CUDA_HOME="/usr/local/cuda", PATH="/usr/local/cuda/bin:${PATH}" }

[tool.cibuildwheel.windows]
before-build = "pip install scikit-build-core pybind11 cmake ninja"
environment = { CMAKE_ARGS="-DGPUFL_ENABLE_NVIDIA=ON -DGPUFL_ENABLE_AMD=OFF -DBUILD_PYTHON=ON" }
